--- a/KDS/WebContent/approve.html
+++ b/KDS/WebContent/approve.html
@@ -4,8 +4,12 @@
 <b>Email Id:{{loan.dealer_email}}</b>
 
    
-    <div class="form-group"> <input type="text" ng-model="loan.dealer_name" value="{{loan.dealer_name}}" disabled>
+    <div class="form-group">
+   <input type="text"  ng-model="currentDealer.admin_id" value="{{currentDealer.admin_id}}" disabled>
+   <input type="hidden"  ng-model="loan.sno" value="{{loan.sno}}" disabled>
+     <input type="hidden"  ng-model="loan.dealer_email" value="{{loan.dealer_email}}" disabled>
   <input type="number" ng-model="loan.loanlimit" placeholder="Loanlimit">
+  <span class="error" ng-show="(theForm.$dirty||submitted) && theForm.password.$error.required">Password is required</span>
 <input type="submit" class="btn btn-default" value="submit" ng-click="loanlimit()"></div>
 
 <!-- <div class="form-group">
