--- a/KDS/WebContent/approvelist.html
+++ b/KDS/WebContent/approvelist.html
@@ -5,9 +5,9 @@
 <table class="table table-striped">
 <thead>
 <tr>
-<th>update</th>
-<th>Kuwy Id(Mobile)</th>
+
 <th>Dealer name</th>
+<th>Kuwy Id(Mobile)</th>
 <th>Email</th>
 <th>Password</th>
 <th>Shop name</th>
@@ -22,17 +22,14 @@
 <th>Shop image</th>
 <th>GEO Address</th>
 <th>Loan Limit</th>
-<th>Remark</th>
+
 </tr>
 </thead>
 <tbody >
-<tr ng-repeat="loan in deal | filter:searchTxt">
-<td>
-<a href="#!approve/{{loan.dealer_mobile}}"><i class="material-icons right">Active</i></a>
-<a href="#!reject/{{loan.dealer_mobile}}"><i class="material-icons right">Inactive</i></a>
-</td>
-<td>{{loan.dealer_mobile}}</td>
+<tr ng-repeat="loan in ape | filter:searchTxt"  >
+
 <td>{{loan.dealer_name}}</td>
+<td>{{loan.dealer_mobile}}</td>
 <td>{{loan.dealer_email}}</td>
 <td>{{loan.dealer_pwd}}</td>
 <td>{{loan.dealer_shopname}}</td>
@@ -47,14 +44,8 @@
 <td>{{loan.dealer_shopimages}}</td>
 <td>{{loan.dealer_geo_address}}</td>
 <td>{{loan.loanlimit}}</td>
-<td>{{loan.remark}}</td>
 
 </tr>
 </tbody>
 </table>
 </div>
-
-<!-- <div><form >
-<input type="text" ng-model="loan.dealer_name">
-<input type="number" ng-model="loan.loanlimit" placeholder="Loanlimit">
-<input type="submit" class="btn btn-default" value="submit" ng-click="loanlimit()"></form></div> -->
