--- a/KDS/WebContent/rej.html
+++ b/KDS/WebContent/rej.html
@@ -2,6 +2,7 @@
 <b>Email Id:{{loan.dealer_email}}</b>
 
    
-    <div class="form-group"> <input type="text" ng-model="loan.dealer_name" value="{{loan.dealer_name}}" disabled>
+    <div class="form-group">
+       <input type="hidden"  ng-model="loan.sno" value="{{loan.sno}}" disabled> <input type="hidden"  ng-model="loan.dealer_email" value="{{loan.dealer_email}}" disabled>
     <textarea rows="5" cols="20" ng-model="loan.remark" title="Enter Blog Content" class="form-control" placeholder="REMARK" ></textarea>
 <input type="submit" class="btn btn-default" value="submit" ng-click="reject()"></div>
