--- a/KDS/WebContent/approvelist.html
+++ b/KDS/WebContent/approvelist.html
@@ -1,51 +1,106 @@
+<style>
+.pagination>li>a, .pagination>li>span {
+    position: relative;
+    float: left;
+    padding: 7px 34px;
+    margin-left: 0px;
+    line-height: 1.42857143;
+    color: #0e0e0e;
+    text-decoration: none;
+    background-color: #fff;
+    border: 1px solid #0c0c0c;
+}
+input[type="text"], input[type="password"], input[type="email"] {
+  width: 350px;
+  padding: 20px 0px;
+  background: transparent;
+  border: 0;
+  border-bottom: 1px solid #435160;
+  outline: none;
+  color: #212121;
+  font-size: 16px;
+}
+.pagination>.disabled>a, .pagination>.disabled>a:focus, .pagination>.disabled>a:hover, .pagination>.disabled>span, .pagination>.disabled>span:focus, .pagination>.disabled>span:hover {
+    color: #0e0e0e;
+    cursor: not-allowed;
+    background-color: #fff;
+    border-color: #191818;
+}
+
+.table>tbody>tr>td, .table>tbody>tr>th, .table>tfoot>tr>td, .table>tfoot>tr>th, .table>thead>tr>td, .table>thead>tr>th {
+    padding: 8px;
+    line-height: 1.42857143;
+    vertical-align: top;
+    border-top: 1px solid #191717;
+}
+.pagination>.active>a, .pagination>.active>a:focus, .pagination>.active>a:hover, .pagination>.active>span, .pagination>.active>span:focus, .pagination>.active>span:hover {
+    z-index: 3;
+    color: #fff;
+    cursor: default;
+    background-color: #191b1d;
+    border-color: #020f1b;
+}
+
+</style>
+{{selectedItem}}
+<select  ng-model="selectedItem" ng-change="val()">
+<option value="">Select Dealer name</option>
+<option ng-repeat="loan in ape" ng-selected="selectedItem == loan.dealer_mobile"  value="{{loan.dealer_mobile}}">{{loan.dealer_name}}</option>
+</select>
 <br>
-<p>Search:</p><input type="text" ng-model="searchTxt" placeholder="search">
+<input type="text" ng-model="searchTxt" placeholder="search">
 <br><br>
 <div id="exportable">
-<table class="table table-striped">
+<table ng-table ="usersTable" class="table table-striped">
 <thead>
 <tr>
 
 <th>Dealer name</th>
 <th>Kuwy Id(Mobile)</th>
 <th>Email</th>
-<th>Password</th>
 <th>Shop name</th>
 <th>Type</th>
 <th>Pan</th>
-<th>Aadhar</th>
 <th>Area</th>
 <th>City</th>
 <th>State</th>
 <th>Pin code</th>
-<th>Sign</th>
-<th>Shop image</th>
 <th>GEO Address</th>
 <th>Loan Limit</th>
 
 </tr>
 </thead>
 <tbody >
-<tr ng-repeat="loan in ape | filter:searchTxt"  >
+<tr dir-paginate="loan in ape | filter:searchTxt | itemsPerPage:3" >
 
 <td>{{loan.dealer_name}}</td>
 <td>{{loan.dealer_mobile}}</td>
 <td>{{loan.dealer_email}}</td>
-<td>{{loan.dealer_pwd}}</td>
 <td>{{loan.dealer_shopname}}</td>
-<td>{{loan.dealer_type}}</td>
+<td><div ng-if="loan.dealer_type == '1'">
+    Multibrand
+</div>
+<div ng-if="loan.dealer_type == '2'">
+   Proprietary
+</div>
+<div ng-if="loan.dealer_type == '3'">
+   Broker
+</div>
+<div ng-if="loan.dealer_type == '4'">
+    Independent
+</div></td>
 <td>{{loan.dealer_pan}}</td>
-<td>{{loan.dealer_aadhaar}}</td>
 <td>{{loan.dealer_area}}</td>
 <td>{{loan.dealer_city}}</td>
 <td>{{loan.dealer_state}}</td>
 <td>{{loan.dealer_pincode}}</td>
-<td>{{loan.dealer_sign}}</td>
-<td>{{loan.dealer_shopimages}}</td>
 <td>{{loan.dealer_geo_address}}</td>
 <td>{{loan.loanlimit}}</td>
 
 </tr>
 </tbody>
 </table>
+<dir-pagination-controls max-size="8" direction-links="true"
+            boundary-links="true" >
+        </dir-pagination-controls>
 </div>
