--- a/KDS/WebContent/rej.html
+++ b/KDS/WebContent/rej.html
@@ -1,8 +1,142 @@
-<b>Name:{{loan.dealer_name}}</b><br>
+<!-- <!-- <b>Name:{{loan.dealer_name}}</b><br>
 <b>Email Id:{{loan.dealer_email}}</b>
 
    
     <div class="form-group">
        <input type="hidden"  ng-model="loan.sno" value="{{loan.sno}}" disabled> <input type="hidden"  ng-model="loan.dealer_email" value="{{loan.dealer_email}}" disabled>
     <textarea rows="5" cols="20" ng-model="loan.remark" title="Enter Blog Content" class="form-control" placeholder="REMARK" ></textarea>
-<input type="submit" class="btn btn-default" value="submit" ng-click="reject()"></div>
+<input type="submit" class="btn btn-default" value="submit" ng-click="reject()"></div> -->
+
+<br>
+<p>Search:</p><input type="text" ng-model="searchTxt" placeholder="search">
+<br><br>
+<div id="exportable">
+<table class="table table-striped">
+<thead>
+<tr>
+
+<th>Kuwy Id(Mobile)</th>
+<th>Image</th>
+<th>Dealer name</th>
+<th>Email</th>
+<th>Shop name</th>
+<th>Type</th>
+<th>Pan</th>
+<th>Area</th>
+<th>City</th>
+<th>State</th>
+<th>Pin code</th>
+<th>GEO Address</th>
+<th>Loan Limit</th>
+<th>Remark</th>
+<th>User credential</th>
+<th>update</th>
+</tr>
+</thead>
+<tbody >
+<tr ng-repeat="loan in deal | filter:searchTxt">
+
+<td>{{loan.dealer_mobile}}</td>
+<td><div ng-if="loan.dealer_shopimages"><img class="img-responsive" height="60px" width="60px"  src="{{loan.dealer_shopimages}}"></div>
+<div ng-if="!loan.dealer_shopimages">Didn't upload</div>
+</td>
+<td>{{loan.dealer_name}}</td>
+<td>{{loan.dealer_email}}</td>
+<td>{{loan.dealer_shopname}}</td>
+<td>
+<div ng-if="loan.dealer_type == '1'">
+    Multibrand
+</div>
+<div ng-if="loan.dealer_type == '2'">
+   Proprietary
+</div>
+<div ng-if="loan.dealer_type == '3'">
+   Broker
+</div>
+<div ng-if="loan.dealer_type == '4'">
+    Independent
+</div>
+</td>
+<td>{{loan.dealer_pan}}</td>
+<td>{{loan.dealer_area}}</td>
+<td>{{loan.dealer_city}}</td>
+<td>{{loan.dealer_state}}</td>
+<td>{{loan.dealer_pincode}}</td>
+<td>{{loan.dealer_geo_address}}</td>
+<td>
+<div ng-if="loan.loanlimit == '0'">
+   Rejected
+</div>
+<div ng-if="loan.loanlimit !== '0'">
+   {{loan.loanlimit}}
+</div>
+</td>
+<td>{{loan.remark}}</td>
+<td>
+<div ng-if="loan.activation_status == '0'">
+    Inactive
+</div>
+<div ng-if="loan.activation_status == '1'">
+    active
+</div>
+</td>
+<td>
+<div ng-if="loan.activation_status == '0'">
+    <a data-toggle="modal" data-target="#myModal" ng-href="#!approve/{{loan.dealer_mobile}}" class="btn btn-info btn-lg" >Active</a><br><br>
+</div>
+<div ng-if="loan.activation_status == '1'">
+<a ng-href="#!reject/{{loan.dealer_mobile}}" data-toggle="modal" data-target="#myModal" class="btn btn-info btn-lg" >Inactive</a>
+</div>
+<a href="#!approve/{{loan.dealer_mobile}}"><i class="material-icons right">Active</i></a>
+<a href="#!reject/{{loan.dealer_mobile}}"><i class="material-icons right">Inactive</i></a>
+</td>
+</tr>
+</tbody>
+</table>
+
+</div>
+
+
+
+<div class="container">
+
+  Modal
+  <div class="modal fade" id="myModal" role="dialog">
+    <div class="modal-dialog">
+    
+      Modal content
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal">&times;</button>
+          <h4 class="modal-title">Enter Your Remark</h4>
+        </div>
+        <div class="modal-body">
+         <input type="hidden"  ng-model="currentDealer.admin_id" value="{{currentDealer.admin_id}}" disabled>
+   <input type="hidden"  ng-model="loan.sno" value="{{loan.sno}}" disabled> 
+   <input type="hidden"  ng-model="loan.dealer_email" value="{{loan.dealer_email}}" disabled>
+    <textarea rows="5" cols="20" ng-model="loan.remark" title="Enter Blog Content" class="form-control" placeholder="REMARK" ></textarea>
+        </div>
+        <div class="modal-footer">
+          <button type="button"  class="btn btn-success" data-dismiss="modal" id="some" ng-click="reject()">submit</button>
+        </div>
+      </div>
+      
+    </div>
+  </div>
+  
+</div>
+
+<script type="text/javascript">
+$(document).ready(function(){
+	console.log("alert======");
+	$('#some').click(function(){
+		/* console.log("alert2======");
+		$('#myModal').modal('hide'); */
+		$(".modal-backdrop").hide();
+		/* console.log("alert3======");
+		$('#myModal').empty();
+		console.log("alert4=====");
+		$('#myModal').remove(); */
+	}); 
+});
+</script> -->
