--- a/KDS/WebContent/index.html
+++ b/KDS/WebContent/index.html
@@ -269,6 +269,7 @@ a {
 				</span>
 		</div>
     </body>
+
 <script src="js/jquery.js"></script>
   <script src="js/bootstrap.js"></script>
 <script type="text/javascript" src="js/angular.js"></script>
@@ -280,4 +281,6 @@ a {
 <script type="text/javascript" src="controller/deal.js"></script>
 <script type="text/javascript" src="controller/dealapp.js"></script>
 <script type="text/javascript" src="service/dealserv.js"></script>
+  <script src="js/animation.js"></script>
+<script src="js/table.js"></script>
 </html>
