--- a/KDS/WebContent/rej.html
+++ b/KDS/WebContent/rej.html
@@ -5,7 +5,7 @@
     <div class="form-group">
        <input type="hidden"  ng-model="loan.sno" value="{{loan.sno}}" disabled> <input type="hidden"  ng-model="loan.dealer_email" value="{{loan.dealer_email}}" disabled>
     <textarea rows="5" cols="20" ng-model="loan.remark" title="Enter Blog Content" class="form-control" placeholder="REMARK" ></textarea>
-<input type="submit" class="btn btn-default" value="submit" ng-click="reject()"></div> -->
+<input type="submit" class="btn btn-default" value="submit" ng-click="reject()"></div>
 
 <br>
 <p>Search:</p><input type="text" ng-model="searchTxt" placeholder="search">
@@ -139,4 +139,4 @@ $(document).ready(function(){
 		$('#myModal').remove(); */
 	}); 
 });
-</script> -->
+</script> --> -->
