--- a/KDS/WebContent/rejectlist.html
+++ b/KDS/WebContent/rejectlist.html
@@ -1,53 +1,14 @@
-<style>
-.pagination>li>a, .pagination>li>span {
-    position: relative;
-    float: left;
-    padding: 7px 34px;
-    margin-left: 0px;
-    line-height: 1.42857143;
-    color: #0e0e0e;
-    text-decoration: none;
-    background-color: #fff;
-    border: 1px solid #0c0c0c;
-}
-input[type="text"], input[type="password"], input[type="email"] {
-  width: 350px;
-  padding: 20px 0px;
-  background: transparent;
-  border: 0;
-  border-bottom: 1px solid #435160;
-  outline: none;
-  color: #212121;
-  font-size: 16px;
-}
-.pagination>.disabled>a, .pagination>.disabled>a:focus, .pagination>.disabled>a:hover, .pagination>.disabled>span, .pagination>.disabled>span:focus, .pagination>.disabled>span:hover {
-    color: #0e0e0e;
-    cursor: not-allowed;
-    background-color: #fff;
-    border-color: #191818;
-}
-
-.table>tbody>tr>td, .table>tbody>tr>th, .table>tfoot>tr>td, .table>tfoot>tr>th, .table>thead>tr>td, .table>thead>tr>th {
-    padding: 8px;
-    line-height: 1.42857143;
-    vertical-align: top;
-    border-top: 1px solid #191717;
-}
-
-.pagination>.active>a, .pagination>.active>a:focus, .pagination>.active>a:hover, .pagination>.active>span, .pagination>.active>span:focus, .pagination>.active>span:hover {
-    z-index: 3;
-    color: #fff;
-    cursor: default;
-    background-color: #111213;
-    border-color: #1f2021;
-}
-
-</style>
-
+ <link href="css/table.css" media="all" rel="stylesheet" type="text/css"/>
+<select ng-model="items">
+<option value="" >All</option>
+  <option value="2" >2</option>
+  <option value="4">4</option>
+  <option value="30">30</option>
+</select>
 <br>
 <br>
-<input type="text" ng-model="searchTxt" uib-typeahead="loan.dealer_name for loan in rjt | filter:$viewValue | limitTo:8" class="form-control">
-<pre ng-bind-template="Model: {{searchTxt | json}}"></pre>
+<input type="text" ng-model="searchTxt" placeholder="search" uib-typeahead="loan.dealer_name for loan in rjt | filter:$viewValue | limitTo:8" class="form-control">
+<!-- <pre ng-bind-template="Model: {{searchTxt | json}}"></pre> -->
 <br><br>
 <!-- <input type="text" ng-model="searchTxt" placeholder="search">
 <br><br> -->
@@ -73,13 +34,14 @@ input[type="text"], input[type="password"], input[type="email"] {
 </tr>
 </thead>
 <tbody >
-<tr dir-paginate="loan in rjt | filter:searchTxt | orderBy:orderByField:reverseSort | itemsPerPage:3"  >
+<tr dir-paginate="loan in rjt | filter:searchTxt | orderBy:orderByField:reverseSort | itemsPerPage:items"  >
 
 <td>{{loan.dealer_name}}</td>
 <td>{{loan.dealer_mobile}}</td>
 <td>{{loan.dealer_email}}</td>
 <td>{{loan.dealer_shopname}}</td>
-<td><div ng-if="loan.dealer_type == '1'">
+<td>
+<div ng-if="loan.dealer_type == '1'">
     Multibrand
 </div>
 <div ng-if="loan.dealer_type == '2'">
@@ -90,7 +52,8 @@ input[type="text"], input[type="password"], input[type="email"] {
 </div>
 <div ng-if="loan.dealer_type == '4'">
     Independent
-</div></td>
+</div>
+</td>
 <td>{{loan.dealer_pan}}</td>
 <td>{{loan.dealer_area}}</td>
 <td>{{loan.dealer_city}}</td>
@@ -103,6 +66,7 @@ input[type="text"], input[type="password"], input[type="email"] {
 </tr>
 </tbody>
 </table>
+
 <dir-pagination-controls
             max-size="8"
             direction-links="true"
