--- a/KDS/WebContent/index.html
+++ b/KDS/WebContent/index.html
@@ -21,6 +21,7 @@
     <ul class="nav navbar-nav">
     <br>
     <li><a class="navbar-brand" href="">DEALER ADMIN PORTAL</a></li>
+    <li ><a href="#!/entrydealerlist">Entry Dealer list</a></li> 
        <li ><a href="#!/dealerlist">Dealer list</a></li> 
         <li ><a href="#!/approvelist">Approved list</a></li> 
          <li ><a href="#!/rejectlist">Rejected list</a></li> 
@@ -33,7 +34,7 @@
 <div ng-view></div>
 <br/>
 <div class="footer navbar-fixed-bottom" ng-show="currentDealer.admin_username">
-<ul ng-social-buttons
+<!-- <ul ng-social-buttons
              data-url="'http://www.kuwy.in/'"
              data-title="current_title"
              data-description="'{{ current_description }}'"
@@ -42,7 +43,7 @@
             <li class="ng-social-google-plus">Google+</li>
             <li class="ng-social-twitter">Twitter</li>
             <li class="ng-social-pinterest">Pinterest</li>
-        </ul>
+        </ul> -->
 				<span>
 				Copyright @ kuwy.in. All Rights Reserved			
 				</span>
